# ytmusic-to-spotify-sync

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SETUP.md  playlist_sync.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
playlist_sync/: __init__.py  cli.py  config.py  csv_manager.py  differ.py  enricher.py  lastfm_client.py  matcher.py  models.py  spotify_client.py  utils.py  ytmusic_client.py
